Reformat code, optiize imports

--- a/templates/inspection/subTemplates/subJobInfo.html
+++ b/templates/inspection/subTemplates/subJobInfo.html
@@ -18,12 +18,23 @@
                 </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    {% if list_many %}
+                        {% for foo in active_job %}
+                            <tr>
+                            <td>{{ foo.item.item_Number }}</td>
+                            <td>{{ foo.item.item_Description }}</td>
+                            <td>{{ foo.item.exp_part_weight }}</td>
+                            <td>{{ foo.item.exp_cycle_time }}</td>
+                            </tr>
+                        {% endfor %}
+                    {% else %}
+                        <tr>
                         <td>{{ active_job.item.item_Number }}</td>
                         <td>{{ active_job.item.item_Description }}</td>
                         <td>{{ active_job.item.exp_part_weight }}</td>
                         <td>{{ active_job.item.exp_cycle_time }}</td>
-                    </tr>
+                        </tr>
+                    {% endif %}
                 </tbody>
             </table>
         </div>
@@ -50,18 +61,35 @@
                 </thead>
                 <tbody>
                 {% if active_job %}
-                    <tr>
-                        <td> {{ active_job.machineOperator }}</td>
-                        <td> {{ active_job.inspectorName }}</td>
-                        <td>{{ active_job.jobNumber }} </td>
-                        <td>{{ active_job.shotWeight }}</td>
-                        <td>{{ active_job.activeCavities }}</td>
-                        {% with  active_job.shotWeight|div:active_job.activeCavities as avgptWeight  %}
-                                <td>{{ avgptWeight|floatformat:3 }}</td>
-                                {% endwith %}
-                        <td>{{ active_job.machNo }}</td>
-                        <td>{{ active_job.cycleTime }}</td>
-                    </tr>
+                    {% if list_many %}
+                        {% for foo in active_job %}
+                            <tr>
+                                <td> {{ foo.machineOperator }}</td>
+                                <td> {{ foo.inspectorName }}</td>
+                                <td>{{ foo.jobNumber }} </td>
+                                <td>{{ foo.shotWeight }}</td>
+                                <td>{{ foo.activeCavities }}</td>
+                                {% with  foo.shotWeight|div:foo.activeCavities as avgptWeight  %}
+                                        <td>{{ avgptWeight|floatformat:3 }}</td>
+                                        {% endwith %}
+                                <td>{{ foo.machNo }}</td>
+                                <td>{{ foo.cycleTime }}</td>
+                            </tr>
+                        {% endfor %}
+                    {% else %}
+                        <tr>
+                            <td> {{ active_job.machineOperator }}</td>
+                            <td> {{ active_job.inspectorName }}</td>
+                            <td>{{ active_job.jobNumber }} </td>
+                            <td>{{ active_job.shotWeight }}</td>
+                            <td>{{ active_job.activeCavities }}</td>
+                            {% with  active_job.shotWeight|div:active_job.activeCavities as avgptWeight  %}
+                                    <td>{{ avgptWeight|floatformat:3 }}</td>
+                                    {% endwith %}
+                            <td>{{ active_job.machNo }}</td>
+                            <td>{{ active_job.cycleTime }}</td>
+                        </tr>
+                    {% endif %}
                 {% endif %}
                 </tbody>
             </table>
@@ -83,13 +111,24 @@
                 </tr>
                 </thead>
                 <tbody>
+
                 {% if active_job %}
-                    <tr>
-                        <td> {{ active_job.jobNumber }}</td>
-                        <td>{{ active_job.moldNumber }}</td>
-                        <td>{{ active_job.moldNumber.mold_description }}</td>
-                        <td>{{ active_job.moldNumber.num_cavities }}</td>
-                    </tr>
+                    {% if list_many %}
+                        {% for foo in active_job %}
+                            <td> {{ foo.jobNumber }}</td>
+                            <td>{{ foo.moldNumber }}</td>
+                            <td>{{ foo.moldNumber.mold_description }}</td>
+                            <td>{{ foo.moldNumber.num_cavities }}</td>
+                        {% endfor %}
+                    {% else %}
+                        <tr>
+                            <td> {{ active_job.jobNumber }}</td>
+                            <td>{{ active_job.moldNumber }}</td>
+                            <td>{{ active_job.moldNumber.mold_description }}</td>
+                            <td>{{ active_job.moldNumber.num_cavities }}</td>
+                        </tr>
+                    {% endif %}
+
                 {% endif %}
                 </tbody>
             </table>
