--- a/templates/inspection/subTemplates/subJobInfo.html
+++ b/templates/inspection/subTemplates/subJobInfo.html
@@ -19,14 +19,12 @@
                 </thead>
                 <tbody>
                     {% if list_many %}
-                        {% for foo in active_job %}
                             <tr>
-                            <td>{{ foo.item.item_Number }}</td>
-                            <td>{{ foo.item.item_Description }}</td>
-                            <td>{{ foo.item.exp_part_weight }}</td>
-                            <td>{{ foo.item.exp_cycle_time }}</td>
+                            <td>{{ active_job.0.item.item_Number }}</td>
+                            <td>{{ active_job.0.item.item_Description }}</td>
+                            <td>{{ active_job.0.item.exp_part_weight }}</td>
+                            <td>{{ active_job.0.item.exp_cycle_time }}</td>
                             </tr>
-                        {% endfor %}
                     {% else %}
                         <tr>
                         <td>{{ active_job.item.item_Number }}</td>
