Let's see if we can use nested relationships...

--- a/templates/ins/modules/inspection_tree.html
+++ b/templates/ins/modules/inspection_tree.html
@@ -4,4 +4,9 @@
 
     <p> {{ inspection_regime.inspection_name_short }}</p>
 
+    {% for foo in inspection_regime.inspection_step %}
+        <p> {{ foo.tag_description_short }}</p>
+    {% endfor %}
+
+
 {% endif %}
