--- a/templates/ins/view.html
+++ b/templates/ins/view.html
@@ -21,8 +21,8 @@
             <div class="panel panel-default">
                 <div class="list-group">
                     {% for each_inspection in inspections %}
-                            <a class="list-group-item" href="/inspection_v2/record?job_number={{job_number}}&inspection_id={{ each_inspection.id }}">
-                            <h4 class="list-group-item-heading">{{ each_inspection.inspection_name_short }}</h4>
+                            <a class="list-group-item" href="/inspection_v2/record?job_number={{job_number}}&inspection_id={{ each_inspection.id }}&new=1">
+                            <h4 class="list-group-item-heading">Start New {{ each_inspection.inspection_name_short }}</h4>
                             <p class="list-group-item-text">{{ each_inspection.inspection_name_desc }}</p>
                             </a>
                     {% endfor %}
