--- a/templates/ins/modules/inspection_tree.html
+++ b/templates/ins/modules/inspection_tree.html
@@ -11,7 +11,7 @@
                 <div class="panel panel-default">
                     <div class="list-group">
                         {% for foo in inspection_regime.inspection_step.all %}
-                                <a class="list-group-item" href="/inspection_v2/record_step?job_number={{job_number}}&inspection_id={{ foo.id }}">
+                                <a class="list-group-item" href="/inspection_v2/record_step?uut_id={{uut_id}}&inspection_id={{ foo.id }}">
                                 <h4 class="list-group-item-heading">{{ foo.tag_description_short  }}</h4>
                                 <p class="list-group-item-text">{{ foo.tag_description_desc }}</p>
                                 </a>
