--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -33,7 +33,7 @@
               <ul class="dropdown-menu">
                   <li><a href="/startupshot/">Startup Shot</a></li>
                 <li><a href="/inspection/">Inspection Home</a></li>
-                  <li><a href="/inspection_v2/">Inspection 2.0 Home</a></li>
+{#                  <li><a href="/inspection_v2/">Inspection 2.0 Home</a></li>#}
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Reports</li>
                   <li><a href="/startupshot/view">Startup Shot Report</a></li>
