--- a/templates/ins/modules/inspection_tree.html
+++ b/templates/ins/modules/inspection_tree.html
@@ -10,8 +10,8 @@
 
                 <div id="jstree">
                   <ul>
-                      {% for foo in inspection_regime.inspection_step.all %}
-                    <li>{{ foo.tag_description_short  }}</li>
+                      {% for foo in inspection_tree.children %}
+                    <li>{{ foo.text  }}</li>
                       {% endfor %}
                   </ul>
                 </div>
