--- a/templates/ins/modules/inspection_tree.html
+++ b/templates/ins/modules/inspection_tree.html
@@ -16,7 +16,7 @@
                   </ul>
                 </div>
 
-
+{# Try tree...#}
 {#                <div class="bootcards-list">#}
 {#                <div class="panel panel-default">#}
 {#                    <div class="list-group">#}
