--- a/templates/ins/modules/inspection_tree.html
+++ b/templates/ins/modules/inspection_tree.html
@@ -11,7 +11,7 @@
                 <div id="jstree">
                   <ul>
                       {% for foo in inspection_tree.children %}
-                        <li>
+                        <li class="jstree-open">
                             {{ foo.text  }}
                             <ul>
                                 <li>
