--- a/templates/ins/modules/inspection_tree.html
+++ b/templates/ins/modules/inspection_tree.html
@@ -15,7 +15,7 @@
                             {{ foo.text  }}
                             <ul>
                                 <li>
-                                    Add New!
+                                    <a href="/inspection_v2/record_step?uut_id={{uut_id}}&inspection_id={{ foo.id }}" class="jstree-clicked">Add New!</a>
                                 </li>
                             </ul>
                         </li>
