--- a/templates/ins/record_inspection.html
+++ b/templates/ins/record_inspection.html
@@ -33,3 +33,10 @@
 <script>
     $('#jstree').jstree();
 </script>
+
+<script>
+    $("#jstree").jstree().bind("select_node.jstree", function (e, data) {
+         var href = data.node.a_attr.href;
+         document.location.href = href;
+    });
+</script>
