--- a/templates/ins/modules/inspection_tree.html
+++ b/templates/ins/modules/inspection_tree.html
@@ -14,7 +14,7 @@
                         <li class="jstree-open">
                             {{ foo.text  }}
                             <ul>
-                                <li>
+                                <li id="{{ uut_id }}{{ foo.id }}">
                                     <a href="/inspection_v2/record_step?uut_id={{uut_id}}&inspection_id={{ foo.id }}" class="jstree-clicked">Add New!</a>
                                 </li>
                             </ul>
