--- a/templates/ins/record_inspection.html
+++ b/templates/ins/record_inspection.html
@@ -35,7 +35,7 @@
 </script>
 
 <script>
-    $("#jstree").jstree().bind("select_node.jstree", function (e, data) {
+    $("#jstree").bind("select_node.jstree", function (e, data) {
          var href = data.node.a_attr.href;
          document.location.href = href;
     });
