--- a/templates/ins/record_step.html
+++ b/templates/ins/record_step.html
@@ -1,19 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CMG QMS - Inspection Entry [{{ request.user.username }}]</title>
-</head>
-<body>
-
-{% include "nav/nav.html" %}
-
-
-<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
-
-    {% include "ins/modules/job_high_level.html" %}
+{#<!DOCTYPE html>#}
+{#<html>#}
+{#<head lang="en">#}
+{#    <meta charset="utf-8">#}
+{#    <meta http-equiv="X-UA-Compatible" content="IE=edge">#}
+{#    <meta name="viewport" content="width=device-width, initial-scale=1">#}
+{#    <title>CMG QMS - Inspection Entry [{{ request.user.username }}]</title>#}
+{#</head>#}
+{#<body>#}
+{##}
+{#{% include "nav/nav.html" %}#}
+{##}
+{##}
+{#<div class="col-sm-offset-1 col-sm-10 bootcards-cards">#}
+{##}
+{#    {% include "ins/modules/job_high_level.html" %}#}
 
     {% if form %}
 
@@ -30,11 +30,13 @@
             </div>
         </div>
 
-{% endif %}
-
-
-</div>
-
-
-</body>
-</html>
+    {% endif %}
+{##}
+{#{% endif %}#}
+{##}
+{##}
+{#</div>#}
+{##}
+{##}
+{#</body>#}
+{#</html>#}
