--- a/templates/ins/record_inspection.html
+++ b/templates/ins/record_inspection.html
@@ -55,8 +55,9 @@
 
 <script>
     $("#jstree").bind("select_node.jstree", function (e, data) {
-{#         var href = data.node.a_attr.href;#}
+         var href = data.node.a_attr.href;
 {#         document.location.href = href;#}
+        $( "#my_modal" ).load( href );
         $('#my_modal').modal('toggle');
     });
 </script>
