--- a/templates/ins/record_inspection.html
+++ b/templates/ins/record_inspection.html
@@ -23,6 +23,7 @@
 </div>
 
 
+<div class="col-sm-offset-4 col-sm-4 bootcards-cards">
 <div id="my_modal" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -40,7 +41,7 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-
+</div>
 
 </body>
 </html>
