--- a/templates/ins/record_inspection.html
+++ b/templates/ins/record_inspection.html
@@ -23,7 +23,7 @@
 </div>
 
 
-<div class="col-sm-offset-4 col-sm-4 bootcards-cards">
+
 <div id="my_modal" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -31,9 +31,11 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Modal title</h4>
       </div>
+        <div class="col-sm-offset-4 col-sm-4 bootcards-cards">
       <div class="modal-body">
         <p>One fine body&hellip;</p>
       </div>
+            </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">Save changes</button>
