--- a/templates/ins/record_step.html
+++ b/templates/ins/record_step.html
@@ -16,7 +16,7 @@
 {#    {% include "ins/modules/job_high_level.html" %}#}
 
     {% if form %}
-
+<div class="col-sm-offset-4 col-sm-4 bootcards-cards">
     <div class="panel panel-default">
             <div class="panel-heading clearfix">
                 <h3 class="panel-title pull-left">Form</h3>
@@ -29,7 +29,7 @@
             </div>
             </div>
         </div>
-
+</div>
     {% endif %}
 {##}
 {#{% endif %}#}
