Refactor test types (range to numeric and float to range)

--- a/templates/inspection/subTemplates/subRangeSummary.html
+++ b/templates/inspection/subTemplates/subRangeSummary.html
@@ -3,7 +3,7 @@
 {% if rangeSummaryDict %}
     <div class="panel panel-default">
         <div class="panel-heading clearfix">
-            <h3 class="panel-title pull-left"> Range Test Summary </h3>
+            <h3 class="panel-title pull-left"> Numeric Test Summary </h3>
         </div>
         <div class="panel-body">
             <table class="table table-hover">
