--- a/templates/inspection/subTemplates/subNumericItemSummary.html
+++ b/templates/inspection/subTemplates/subNumericItemSummary.html
@@ -1,12 +1,12 @@
-{% if rangeSummaryDict %}
+{% if numericSummaryDict %}
     <div class="panel panel-default">
         <div class="panel-heading clearfix">
-            <h3 class="panel-title pull-left"> {{ rangeSummaryDict.inspectionName }} </h3>
+            <h3 class="panel-title pull-left"> {{ numericSummaryDict.inspectionName }} </h3>
         </div>
     <div class="panel-body">
         <table class="table table-hover">
             <thead>
-            <tr id={{ rangeSummaryDict.html_id }}>
+            <tr id={{ numericSummaryDict.html_id }}>
                 <th>Job Number</th>
                 <th>Total Inspections</th>
                 <th>Min</th>
@@ -16,15 +16,15 @@
             </tr>
             </thead>
             <tbody>
-            {% for key,value in rangeSummaryDict.items %}
+            {% for key,value in numericSummaryDict.items %}
                 <tr>
                 {% if value.jobID %}
                     <td> {{ value.jobID }}</td>
-                    <td> {{ value.rangeStats.rangeList__count }}</td>
-                    <td> {{ value.rangeStats.rangeList__min }} </td>
-                    <td> {{ value.rangeStats.rangeList__avg }} </td>
-                    <td> {{ value.rangeStats.rangeList__stddev }} </td>
-                    <td> {{ value.rangeStats.rangeList__max }} </td>
+                    <td> {{ value.numericStats.numericList__count }}</td>
+                    <td> {{ value.numericStats.numericList__min }} </td>
+                    <td> {{ value.numericStats.numericList__avg }} </td>
+                    <td> {{ value.numericStats.numericList__stddev }} </td>
+                    <td> {{ value.numericStats.numericList__max }} </td>
                 {% endif %}
                 </tr>
 
