--- a/templates/inspection/subTemplates/subNumericSummary.html
+++ b/templates/inspection/subTemplates/subNumericSummary.html
@@ -1,6 +1,6 @@
 {% load mathfilters %}
 
-{% if rangeSummaryDict %}
+{% if numericSummaryDict %}
     <div class="panel panel-default">
         <div class="panel-heading clearfix">
             <h3 class="panel-title pull-left"> Numeric Test Summary </h3>
@@ -9,7 +9,7 @@
             <table class="table table-hover">
                 <thead>
                 <tr>
-                    <th>Range Test Name</th>
+                    <th>numeric Test Name</th>
                     <th>Total Inspections</th>
                     <th>Min</th>
                     <th>Average</th>
@@ -18,14 +18,14 @@
                 </tr>
                 </thead>
             <tbody>
-            {% for key,value in rangeSummaryDict.items %}
+            {% for key,value in numericSummaryDict.items %}
                 <tr>
-                <td> {{ value.rangeName }} </td>
-                <td> {{ value.rangeStats.rangeList__count }}</td>
-                <td> {{ value.rangeStats.rangeList__min }}</td>
-                <td> {{ value.rangeStats.rangeList__avg }}</td>
-                <td> {{ value.rangeStats.rangeList__stddev }}</td>
-                <td> {{ value.rangeStats.rangeList__max }}</td>
+                <td> {{ value.numericName }} </td>
+                <td> {{ value.numericStats.numericList__count }}</td>
+                <td> {{ value.numericStats.numericList__min }}</td>
+                <td> {{ value.numericStats.numericList__avg }}</td>
+                <td> {{ value.numericStats.numericList__stddev }}</td>
+                <td> {{ value.numericStats.numericList__max }}</td>
                 </tr>
             {% endfor %}
             </tbody>
