--- a/templates/inspection/subTemplates/subNumericSummary.html
+++ b/templates/inspection/subTemplates/subNumericSummary.html
@@ -9,7 +9,7 @@
             <table class="table table-hover">
                 <thead>
                 <tr>
-                    <th>numeric Test Name</th>
+                    <th>Numeric Test Name</th>
                     <th>Total Inspections</th>
                     <th>Min</th>
                     <th>Average</th>
