--- a/templates/inspection/reports/partReport.html
+++ b/templates/inspection/reports/partReport.html
@@ -29,8 +29,14 @@
             {% endwith %}
     {% endfor %}
 
-    {% for key,value in partDict.rangeTest.items %}
-            {% with value as rangeSummaryDict %}
+    {% for key,value in partDict.numericTest.items %}
+            {% with value as numericSummaryDict %}
+                {% include "inspection/subTemplates/subNumericItemSummary.html" %}
+            {% endwith %}
+    {% endfor %}
+
+    {% for key,value in partDict.range_test.items %}
+            {% with value as range_summary_dict %}
                 {% include "inspection/subTemplates/subRangeItemSummary.html" %}
             {% endwith %}
     {% endfor %}
