--- a/templates/inspection/subTemplates/subNumericInspection.html
+++ b/templates/inspection/subTemplates/subNumericInspection.html
@@ -1,7 +1,11 @@
 {% if numericDict %}
         <div class="panel panel-default">
                 <div class="panel-heading clearfix">
-                <h3 class="panel-title pull-left"> {{ numericDict.0.numericTestName }} </h3>
+                    {% if numericDict.0.numericTestName.testName.report_name %}
+                        <h3 class="panel-title pull-left"> {{ numericDict.0.numericTestName.testName.report_name }} </h3>
+                    {% else %}
+                        <h3 class="panel-title pull-left"> {{ numericDict.0.numericTestName.testName }} </h3>
+                    {% endif %}
                 </div>
             <div class="panel-body">
                 <table class="table table-hover">
