--- a/templates/inspection/subTemplates/subRangeInspection.html
+++ b/templates/inspection/subTemplates/subRangeInspection.html
@@ -1,7 +1,11 @@
 {% if range_dict %}
         <div class="panel panel-default">
                 <div class="panel-heading clearfix">
-                <h3 class="panel-title pull-left"> {{ range_dict.0.rangeTestName }} </h3>
+                    {% if range_dict.0.rangeTestName.report_name %}
+                        <h3 class="panel-title pull-left"> {{ range_dict.0.rangeTestName.report_name }} </h3>
+                    {% else %}
+                        <h3 class="panel-title pull-left"> {{ range_dict.0.rangeTestName }} </h3>
+                    {% endif %}
                 </div>
             <div class="panel-body">
                 <table class="table table-hover">
