Add config file template and update git ignore

--- a/templates/dashboard/inspection_summary.html
+++ b/templates/dashboard/inspection_summary.html
@@ -1,4 +1,15 @@
 
+# jquery
+# jquery.dataTables.min.js
+# datatables min css
+# datatables css
+# datatbltes stylesheet
+#
+
+{% include "nav/nav.html" %}
+
+
+
 <html>
     <table class="'datatable table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
