Add config file template and update git ignore

--- a/templates/dashboard/inspection_summary.html
+++ b/templates/dashboard/inspection_summary.html
@@ -5,6 +5,10 @@
 # datatables css
 # datatbltes stylesheet
 #
+<script src="//code.jquery.com/jquery-1.12.3.js "></script>
+<script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
+
 
 {% include "nav/nav.html" %}
 
