--- a/templates/dashboard/inspection_summary.html
+++ b/templates/dashboard/inspection_summary.html
@@ -13,6 +13,12 @@
     <table class="'datatable table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <th>Date</th>
+            <th>Inspection Type</th>
+            <th>Job Number</th>
+            <th>Item Number</th>
+            <th>Test Name</th>
+            <th>Inspection Result</th>
+            <th>Report Text</th>
         </thead>
         <tbody>
 
