--- a/templates/dashboard/inspection_summary.html
+++ b/templates/dashboard/inspection_summary.html
@@ -1,16 +1,15 @@
 
-<script src="//code.jquery.com/jquery-1.12.3.js "></script>
-<script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
+
 <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
+<script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
 
-
-    <link rel="stylesheet" type="text/css" href="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/css/jquery.dataTables.css" />
+ <link rel="stylesheet" type="text/css" href="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.10.12/css/jquery.dataTables.css" />
 {% include "nav/nav.html" %}
 
 
 
 <html>
-    <table class="'datatable table table-striped table-bordered" cellspacing="0" width="100%">
+    <table class="datatable table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <th>Date</th>
             <th>Inspection Type</th>
