--- a/templates/dashboard/inspection_summary.html
+++ b/templates/dashboard/inspection_summary.html
@@ -3,7 +3,7 @@
 <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
 <script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
 
- <link rel="stylesheet" type="text/css" href="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.10.12/css/jquery.dataTables.css" />
+ <link rel="stylesheet" type="text/css" href=https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css />
 {% include "nav/nav.html" %}
 
 
