--- a/templates/dashboard/inspection_summary.html
+++ b/templates/dashboard/inspection_summary.html
@@ -1,11 +1,10 @@
 
+#{% include "nav/nav.html" %}
+
 
 <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
 <script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
-
- <link rel="stylesheet" type="text/css" href=https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css />
-{% include "nav/nav.html" %}
-
+<link rel="stylesheet" type="text/css" href=https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css />
 
 
 <html>
