--- a/templates/dashboard/inspection_summary.html
+++ b/templates/dashboard/inspection_summary.html
@@ -14,6 +14,7 @@
             <th>Inspection Type</th>
             <th>Job Number</th>
             <th>Item Number</th>
+            <th>Item Description</th>
             <th>Test Name</th>
             <th>Inspection Result</th>
             <th>Report Text</th>
