--- a/templates/dashboard/inspection_summary.html
+++ b/templates/dashboard/inspection_summary.html
@@ -31,6 +31,7 @@
             "pageLength": 25,
             "processing": true,
             "serverSide": true,
+            "order": [[ 0, "desc" ]]
             "ajax": "{% url 'order_list_json' %}"
         });
         });
