use inspection summary cache

--- a/templates/dashboard/inspection_summary.html
+++ b/templates/dashboard/inspection_summary.html
@@ -1,5 +1,5 @@
 
-#{% include "nav/nav.html" %}
+{% include "nav/nav.html" %}
 
 
 <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
