--- a/templates/equipment/subTemplates/pm_subreport.html
+++ b/templates/equipment/subTemplates/pm_subreport.html
@@ -18,8 +18,8 @@
                         <td>{{ each_PM.employee }}</td>
                         <td>{{ each_PM.Date_Performed }}</td>
                         <td>{{ each_PM.pm_frequency }}</td>
-                        <td> {% for pmt in each_PM.logged_pm.all %} <p>{{ pmt.pm_item }}</p> {% endfor %}</td>
-                        <td> {{ each_PM.comments }}</td>
+                        <td> {% for pmt in each_PM.logged_pm.all %} <p>{{ pmt.pm_item|wordwrap:25 }}</p> {% endfor %}</td>
+                        <td> {{ each_PM.comments|wordwrap:25 }}</td>
                     </tr>
                 {% endfor %}
                 </tbody>
