--- a/templates/phl/reports/phl.html
+++ b/templates/phl/reports/phl.html
@@ -53,7 +53,7 @@
                                             {{ ep.dateCreated }}
                                         </td>
                                         <td>
-                                            {{ ep.descEvent }}
+                                            {{ ep.descEvent|wordwrap:25 }}
                                         </td>
                                     </tr>
                                 {% endfor %}
