Change the title of the "Logged PM" column title to "Completed PM Logged" and "Completed Repair Logged". See QMS-9

--- a/templates/equipment/subTemplates/pm_subreport.html
+++ b/templates/equipment/subTemplates/pm_subreport.html
@@ -8,7 +8,7 @@
                     <th>Mechanic</th>
                     <th>Date</th>
                     <th>PM Frequency</th>
-                    <th>Logged PM</th>
+                    <th>Completed PM Logged</th>
                     <th>Comments</th>
                 </tr>
                 </thead>
