--- a/templates/equipment/reports/equipment_repair_report.html
+++ b/templates/equipment/reports/equipment_repair_report.html
@@ -20,7 +20,7 @@
     {% if repair_info %}
         <div class="panel panel-default ">
         <div class="panel-heading clearfix">
-                <h3 class="panel-title pull-left"> Repair Information </h3>
+                <h3 class="panel-title pull-left"> Completed Repair Logged </h3>
             </div>
             <div class="panel-body">
                 <table class="table table-hover">
