--- a/startupshot/templates/startupshot/sub_html/view_active_mattec.html
+++ b/startupshot/templates/startupshot/sub_html/view_active_mattec.html
@@ -3,7 +3,7 @@
         <div class="panel panel-default">
             <div class="list-group">
                 {% for eachActive in activeInMattec %}
-                    <a class="list-group-item" href="{% url 'start_up_shot_create_new' eachActive.jobNumber.strip %}">
+                    <a class="list-group-item" href="{% url 'start_up_shot_create_new' %}?job_number={{eachActive.jobNumber.strip}}&machine_number={{eachActive.machNo.strip}}">
                         <h4 class="list-group-item-heading">{{ eachActive.machNo }}</h4>
 
                         <p class="list-group-item-text">{{ eachActive.itemDesc }} </p>
